trying to fix ther bg iamge not showing up

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -61,6 +61,7 @@
 }
 
 .nav-connect a {
+  text-wrap: nowrap;
   font-size: 1.2em;
   color: goldenrod;
   padding: 10px;
@@ -102,7 +103,7 @@
 
 /* Scrolled nav styles */
 .nav.scrolled {
-  background: url('/images/graphics/vector-curves.png') no-repeat center center fixed;
+  background: url('../images/graphics/vector-curves.png') no-repeat center center fixed;
   background-size: cover;
   background-color: #34230e;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -139,7 +140,7 @@
   }
 
   .nav-links.show {
-    background: url("/images/graphics/vector-curves.png") no-repeat center
+    background: url("../images/graphics/vector-curves.png") no-repeat center
       center fixed;
     background-size: cover;
     display: flex;
@@ -214,7 +215,7 @@
   }
 
   .nav-links.show {
-    background: url("/images/graphics/vector-curves.png") no-repeat center center
+    background: url("../images/graphics/vector-curves.png") no-repeat center center
     fixed;
   background-size: cover;
     display: flex;
