--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 
 /* Body styles */
 body {
-  background: url('/images/graphics/vector-curves.png') no-repeat center center fixed;
+  background: url('../images/ag-vector-curves.png') no-repeat center center fixed;
   background-size: cover; /* Adjust the image to cover the entire background */
   width: 100%;
   overflow-x: hidden;
@@ -143,7 +143,7 @@ body {
 @media only screen and (min-width: 320px) and (max-width: 768px) {
   .home-title {
     top: 38%;
-    font-size: 18vw;
+    font-size: 15vw;
     white-space: normal; /* Allow text to wrap */
     line-height: 1.2; /* Adjust line height for readability */
   }
@@ -156,9 +156,8 @@ body {
 
   .cover-image {
     object-fit: cover;
-    height: 80%;
+    height: 100%;
     width: 100%;
-    max-height: 100%;
   }
 
   .arrow-box {
